Fixes data type problems with nulls