@@ -21,7 +21,6 @@
 package esa.mo.mc.impl.provider;
 
 import esa.mo.com.impl.consumer.EventConsumerServiceImpl;
-import esa.mo.com.impl.provider.ArchiveSyncProviderServiceImpl;
 import esa.mo.com.impl.util.HelperArchive;
 import esa.mo.helpertools.connections.ConfigurationProviderSingleton;
 import esa.mo.helpertools.connections.ConnectionProvider;
@@ -31,7 +30,6 @@ import esa.mo.mc.impl.util.GroupRetrieval;
 import esa.mo.mc.impl.util.MCServicesHelper;
 import esa.mo.reconfigurable.service.ConfigurationChangeListener;
 import esa.mo.reconfigurable.service.ReconfigurableService;
-
 import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -140,8 +138,7 @@ public class ParameterProviderServiceImpl extends ParameterInheritanceSkeleton i
             }
 
             if (MALContextFactory.lookupArea(MCHelper.MC_AREA_NAME, MCHelper.MC_AREA_VERSION)
-                        .getServiceByName(ParameterHelper.PARAMETER_SERVICE_NAME) == null)
-            {
+                    .getServiceByName(ParameterHelper.PARAMETER_SERVICE_NAME) == null) {
                 ParameterHelper.init(MALContextFactory.getElementFactoryRegistry());
             }
 
@@ -319,7 +316,7 @@ public class ParameterProviderServiceImpl extends ParameterInheritanceSkeleton i
             Long out = manager.setGenerationEnabled(objIdToBeEnabled.get(index),
                     valueToBeEnabled.get(index), source, connection.getConnectionDetails());
             output.add(out);
-            
+
             // requirement: 3.3.10.2.l
             if (out.longValue() != objIdToBeEnabled.get(index)) {
                 periodicReportingManager.refresh(objIdToBeEnabled.get(index));
@@ -329,7 +326,7 @@ public class ParameterProviderServiceImpl extends ParameterInheritanceSkeleton i
         if (configurationAdapter != null) {
             configurationAdapter.onConfigurationChanged(this);
         }
-        
+
         return output;
     }
 
@@ -368,7 +365,8 @@ public class ParameterProviderServiceImpl extends ParameterInheritanceSkeleton i
             }
 
             // requirement: 3.3.9.2.f the new rawValues type and its definitions rawType must be the same
-            if (!newValue.getRawValue().getTypeShortForm().equals(Integer.valueOf(pDef.getRawType()))) {
+            if (newValue.getRawValue() != null
+                    && !newValue.getRawValue().getTypeShortForm().equals(new Integer(pDef.getRawType()))) {
                 invIndexList.add(new UInteger(index));
                 continue;
             }
@@ -526,9 +524,9 @@ public class ParameterProviderServiceImpl extends ParameterInheritanceSkeleton i
         }
 
         ObjectInstancePairList objectInstancePairs = manager.addMultiple(names,
-                                                                         details,
-                                                                 source,
-                                                                 connection.getConnectionDetails());
+                details,
+                source,
+                connection.getConnectionDetails());
         //store the objects
         outPairLst.addAll(objectInstancePairs); //  requirement: 3.3.12.2.g
         // Refresh the Periodic Reporting Manager for the added Definitions
@@ -536,13 +534,13 @@ public class ParameterProviderServiceImpl extends ParameterInheritanceSkeleton i
         final ReconfigurableService t = this;
 
         Thread thread = new Thread(() -> {
-           for(ObjectInstancePair newParamIds : objectInstancePairs) {
-               periodicReportingManager.refresh(newParamIds.getObjIdentityInstanceId());
-           }
+            for (ObjectInstancePair newParamIds : objectInstancePairs) {
+                periodicReportingManager.refresh(newParamIds.getObjIdentityInstanceId());
+            }
 
-           if (configurationAdapter != null) {
-               configurationAdapter.onConfigurationChanged(t);
-           }
+            if (configurationAdapter != null) {
+                configurationAdapter.onConfigurationChanged(t);
+            }
         });
 
         thread.start();//To not block main thread parameter timers can be started in parallel thread
@@ -725,7 +723,7 @@ public class ParameterProviderServiceImpl extends ParameterInheritanceSkeleton i
                 confSetIdents.getObjInstIds());
 
         periodicReportingManager.pause();
-        
+
         manager.reconfigureDefinitions(confSetIdents.getObjInstIds(), idents,
                 confSetDefs.getObjInstIds(), pDefs);   // Reconfigures the Manager
 
@@ -1020,15 +1018,15 @@ public class ParameterProviderServiceImpl extends ParameterInheritanceSkeleton i
                 ParameterDefinitionDetails pDef2 = (ParameterDefinitionDetails) manager.getDefinition(objId.getObjIdentityInstanceId());
                 if (pDef2.getGenerationEnabled()) {
                     outIds.add(objId); // Don't push the PVals that are not enabled...
-                    
+
                     // If the conversion value was not provided, we can try to generate it
-                    if(parameters.get(i).getParameterValue().getConvertedValue() == null){
+                    if (parameters.get(i).getParameterValue().getConvertedValue() == null) {
                         ParameterValue newPVal = manager.generateNewParameterValue(
                                 parameters.get(i).getParameterValue().getRawValue(), pDef2, false);
                         parameters.get(i).getParameterValue().setConvertedValue(newPVal.getConvertedValue());
                         parameters.get(i).getParameterValue().setValidityState(newPVal.getValidityState());
                     }
-                    
+
                     parameterValueList.add(parameters.get(i).getParameterValue());
                     parameterInstances.add(parameters.get(i));
                 }
@@ -1049,9 +1047,9 @@ public class ParameterProviderServiceImpl extends ParameterInheritanceSkeleton i
             for (int i = 0; i < outIds.size(); i++) {
                 relatedIds.add(outIds.get(i).getObjDefInstanceId());
                 sourceIds.add(parameters.get(i).getSource());
-                final FineTime timestamp = (parameters.get(i).getTimestamp() != null) ? 
-                        HelperTime.timeToFineTime(parameters.get(i).getTimestamp()) : 
-                        defaultTimestamp;
+                final FineTime timestamp = (parameters.get(i).getTimestamp() != null)
+                        ? HelperTime.timeToFineTime(parameters.get(i).getTimestamp())
+                        : defaultTimestamp;
                 timestamps.add(timestamp);
             }
 
@@ -1109,7 +1107,8 @@ public class ParameterProviderServiceImpl extends ParameterInheritanceSkeleton i
      * publishes a periodic parameter update for the given parameter
      *
      * @param identityId the id of the parameter identity
-     * @param storeInCOMArchive flag indicating whether or not the parameter should be stored in the archive
+     * @param storeInCOMArchive flag indicating whether or not the parameter
+     * should be stored in the archive
      */
     private void publishPeriodicParameterUpdate(final Long identityId, boolean storeInCOMArchive) {
         try {
@@ -1120,7 +1119,7 @@ public class ParameterProviderServiceImpl extends ParameterInheritanceSkeleton i
              */
             final ParameterValue parameterValue = manager.getParameterValue(identityId);
             final Identifier name = manager.getName(identityId);
-            
+
             ArrayList<ParameterInstance> parameters = new ArrayList<>(1);
             parameters.add(new ParameterInstance(name, parameterValue, null, HelperTime.getTimestampMillis()));
             this.pushMultipleParameterValues(parameters, storeInCOMArchive);
